ghc-6.2/hslibs/win32/Win32Registry_stub_ffi.h

extern void* prim_regRestoreKey(HKEY arg1,char * arg2,int arg3);
extern int access_prim_regRestoreKey_gc_failed(HsPtr);
extern void* access_prim_regRestoreKey_gc_failstring(HsPtr);
extern void* prim_regSaveKey(HKEY arg1,char * arg2,void * arg3);
extern int access_prim_regSaveKey_gc_failed(HsPtr);
extern void* access_prim_regSaveKey_gc_failstring(HsPtr);
extern void* prim_regSetValue(HKEY arg1,char * arg2,char * arg3,int arg4);
extern int access_prim_regSetValue_gc_failed(HsPtr);
extern void* access_prim_regSetValue_gc_failstring(HsPtr);
extern int prim_rEG_BINARY();
extern int prim_rEG_DWORD();
extern int prim_rEG_DWORD_LITTLE_ENDIAN();
extern int prim_rEG_DWORD_BIG_ENDIAN();
extern int prim_rEG_LINK();
extern int prim_rEG_MULTI_SZ();
extern int prim_rEG_NONE();
extern int prim_rEG_RESOURCE_LIST();
extern int prim_rEG_SZ();
extern void* prim_regSetValueEx(HKEY arg1,char * arg2,int arg3,void * arg4,int arg5);
extern int access_prim_regSetValueEx_gc_failed(HsPtr);
extern void* access_prim_regSetValueEx_gc_failstring(HsPtr);
extern void* prim_regUnLoadKey(HKEY arg1,char * arg2);
extern int access_prim_regUnLoadKey_gc_failed(HsPtr);
extern void* access_prim_regUnLoadKey_gc_failstring(HsPtr);