ghc-6.2/hslibs/win32/Win32Registry.hs


regRestoreKey :: HKEY -> String -> RegRestoreFlags -> IO ()
regRestoreKey arg1 gc_arg1 arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regRestoreKey arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_regRestoreKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regRestoreKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regRestoreKey" prim_regRestoreKey :: Ptr () -> Addr -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regRestoreKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regRestoreKey_gc_failstring :: Addr -> IO (Addr)

regSaveKey :: HKEY -> String -> MbLPSECURITY_ATTRIBUTES -> IO ()
regSaveKey arg1 gc_arg1 arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  (case arg3 of {
      Nothing -> (return (nullAddr));
      (Just arg3) -> (return ((arg3)))
   }) >>= \ (arg3) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regSaveKey arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_regSaveKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regSaveKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regSaveKey" prim_regSaveKey :: Ptr () -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regSaveKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regSaveKey_gc_failstring :: Addr -> IO (Addr)

-- #ifdef FOR_WINDOWS_NT

-- %fun RegSetKeySecurity :: HKEY -> SECURITY_INFORMATION -> SECURITY_DESCRIPTOR -> IO ()

-- #endif

-- 3.1 compat. - only allows storage of REG_SZ values.
regSetValue :: HKEY -> String -> String -> IO ()
regSetValue arg1 gc_arg1 gc_arg2 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  (marshall_stringLen_ gc_arg2) >>= \ (arg3,arg4) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regSetValue arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_regSetValue_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regSetValue_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regSetValue" prim_regSetValue :: Ptr () -> Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regSetValue_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regSetValue_gc_failstring :: Addr -> IO (Addr)


type RegValueType = Int32

foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_BINARY" rEG_BINARY :: RegValueType
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_DWORD" rEG_DWORD :: RegValueType
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_DWORD_LITTLE_ENDIAN" rEG_DWORD_LITTLE_ENDIAN :: RegValueType
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_DWORD_BIG_ENDIAN" rEG_DWORD_BIG_ENDIAN :: RegValueType
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_LINK" rEG_LINK :: RegValueType
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_MULTI_SZ" rEG_MULTI_SZ :: RegValueType
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_NONE" rEG_NONE :: RegValueType
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_RESOURCE_LIST" rEG_RESOURCE_LIST :: RegValueType
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_SZ" rEG_SZ :: RegValueType


-- regSetValueEx has a somewhat wieldly interface if all you want to do is
-- add a string value (a Common Thing to want to do), so we support this
-- specially:
regSetStringValue :: HKEY -> String -> String -> IO ()
regSetStringValue hk key val = do
   v <- marshall_string_ val
   regSetValueEx hk key rEG_SZ v (length val)
   free v
   return ()

regSetValueEx :: HKEY -> String -> RegValueType -> Addr -> Int -> IO ()
regSetValueEx arg1 gc_arg1 arg3 arg4 arg5 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regSetValueEx arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_regSetValueEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regSetValueEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regSetValueEx" prim_regSetValueEx :: Ptr () -> Addr -> Int32 -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regSetValueEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regSetValueEx_gc_failstring :: Addr -> IO (Addr)

regUnLoadKey :: HKEY -> String -> IO ()
regUnLoadKey arg1 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regUnLoadKey arg1 arg2
  >>= \ gc_result ->
  access_prim_regUnLoadKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regUnLoadKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regUnLoadKey" prim_regUnLoadKey :: Ptr () -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regUnLoadKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regUnLoadKey_gc_failstring :: Addr -> IO (Addr)

